--- a/src/view/PropertyEditorHeader.mxml
+++ b/src/view/PropertyEditorHeader.mxml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 width="100%" height="22">
+		 width="100%" height="22" creationComplete="onCreationCompletes()">
 	<fx:Script>
 		<![CDATA[
+			import spark.components.Image;
 			[Bindable] public var componentName:String;
+			
+			public var rightButtons:Array; // {icon: <Image/>, handle: Function}
+			
+			private function onCreationCompletes():void
+			{
+				for each (var i:Object in rightButtons)
+				{
+					if (i.hasOwnProperty("icon") && (i.icon is Image) &&
+						i.hasOwnProperty("handle") && (i.handle != null))
+					{
+						hgRightButtons.addElement(i.icon);
+						(i.icon as Image).buttonMode = true;
+						i.icon.addEventListener(MouseEvent.CLICK, i.handle, false, 0, true);
+					}
+				}
+			}
 		]]>
 	</fx:Script>
 	<s:Rect width="100%" height="100%">
@@ -17,4 +34,7 @@
 			 width="96%" maxDisplayedLines="1"
 			 fontWeight="bold" fontSize="11" color="0xffffff"
 			 verticalCenter="0" left="10"/>
+	<s:HGroup id="hgRightButtons"
+			  verticalCenter="0" right="8" 
+			  verticalAlign="middle" horizontalAlign="right"/>
 </s:Group>
