Message text updates (reference prominic/Moonshine-IDE#350)

--- a/src/view/ComponentsOrganizer.mxml
+++ b/src/view/ComponentsOrganizer.mxml
@@ -257,6 +257,7 @@
 									});
 								}
 								
+								updateCellLabels(tree.selectedItem as OrganizerItem);
 								refreshItem(change.fieldClass as IVisualElement);
 							}
 							else if (change.fieldClass is Grid)
@@ -497,7 +498,7 @@
 				<s:SolidColorStroke color="0xCCCCCC"/>
 			</s:stroke>
 		</s:Rect>
-		<s:Label text="History manager is not available to Organizer. Use refresh button above if requires."
+		<s:Label text="Organizer is still under development. If the tree gets out of sync with the mockup, use the refresh button at the top of the panel."
 				 width="100%" maxDisplayedLines="4" fontSize="11"
 				 paddingBottom="10" paddingLeft="10" paddingRight="10" paddingTop="12"/>
 		<s:Image source="@Embed('/assets/icoClose.png')"
