Add ability to read and display CDATA section provided through Visual Editor XML. Add implementation to MainApplication, Div and RootDiv. (reference prominic/Moonshine-IDE#407)

--- a/src/view/primeFaces/propertyEditors/DivPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/DivPropertyEditor.mxml
@@ -14,5 +14,5 @@
     <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin"/>
 
     <primeFaces:DivLayoutForm />
-
+    <forms:TextInformationForm label="Additional information" textProperty="cdataInformation"/>
 </suportclasses:BasePropertyEditor>
