Property Panel: Fix height of TextArea in Additional Information section (reference prominic/Moonshine-IDE#407)

--- a/src/view/forms/TextInformationForm.mxml
+++ b/src/view/forms/TextInformationForm.mxml
@@ -12,8 +12,8 @@
     <s:FormHeading skinClass="skins.FormHeadingSkin" height="0"/>
     <s:FormItem label="{label}" skinClass="skins.StackedFormItemSkin">
         <s:TextArea id="textInput"
-                    text="{bindableText}" width="100%" minWidth="156" editable="false" selectable="true"
-                    skinClass="skins.TextInputSkin" prompt="{prompt}" />
+                    text="{bindableText}" width="100%" minWidth="156" height="100%" editable="false" selectable="true"
+                    prompt="{prompt}" />
     </s:FormItem>
 
     <fx:Script><![CDATA[
