CDATA: Reading and saving CDATA infromation for all components (reference prominic/Moonshine-IDE#407)

--- a/src/view/primeFaces/propertyEditors/AutoCompleteDropDownListPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/AutoCompleteDropDownListPropertyEditor.mxml
@@ -20,5 +20,5 @@
 	<forms:TextForm label="Item Value" textProperty="itemValue" prompt="#\{bean.property\}"/>
 	<forms:TextForm label="Converter" textProperty="converter"/>
     <forms:ToggleButtonSelectedForm label="Multiple Selection" textProperty="multiple"/>
-
+    <forms:TextInformationForm label="Additional information" textProperty="cdataInformation"/>
 </suportclasses:BasePropertyEditor>
