--- a/src/view/primeFaces/propertyEditors/CheckboxPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/CheckboxPropertyEditor.mxml
@@ -13,4 +13,5 @@
 	<s:FormHeading label="Data" skinClass="skins.FormHeadingSkin" />
 	<forms:TextForm label="Value" textProperty="label"/>
 	<forms:ToggleButtonSelectedForm label="Selected" textProperty="selected"/>
+	<forms:TextInformationForm label="Additional information" textProperty="cdataInformation"/>
 </suportclasses:BasePropertyEditor>
