--- a/src/view/primeFaces/propertyEditors/InputMaskPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/InputMaskPropertyEditor.mxml
@@ -12,4 +12,5 @@
     <forms:TextForm label="Mask: '9'(0-9), '*'(a-z, A-Z)" textProperty="maskText"/>
     <primeFaces:MaskedTextInputForm label="Value" textProperty="text" bindableMaskText="{selectedItem['maskText']}"/>
     <forms:ToggleButtonSelectedForm label="Required" textProperty="required"/>
+    <forms:TextInformationForm label="Additional information" textProperty="cdataInformation"/>
 </suportclasses:BasePropertyEditor>
