--- a/src/view/primeFaces/propertyEditors/InputTextareaPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/InputTextareaPropertyEditor.mxml
@@ -35,4 +35,5 @@
 					enabled="{Object(selectedItem).isCounterDisplay}"/>
 	<forms:TextForm label="Counter Template" textProperty="counterTemplate"
 					enabled="{Object(selectedItem).isCounterDisplay}"/>
+	<forms:TextInformationForm label="Additional information" textProperty="cdataInformation"/>
 </suportclasses:BasePropertyEditor>
