--- a/src/view/primeFaces/propertyEditors/OutputLabelPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/OutputLabelPropertyEditor.mxml
@@ -12,4 +12,5 @@
     <forms:TextForm label="Value" textProperty="text"/>
     <forms:TextForm id="txtFor" label="For" textProperty="forAttribute" prompt="Element id"/>
     <forms:ToggleButtonSelectedForm label="Indicate required (Displays *)" textProperty="indicateRequired"/>
+    <forms:TextInformationForm label="Additional information" textProperty="cdataInformation"/>
 </suportclasses:BasePropertyEditor>
