--- a/src/view/primeFaces/propertyEditors/IncludePropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/IncludePropertyEditor.mxml
@@ -51,5 +51,5 @@
 							collectionProperty="filesList" labelField="resourcePathWithoutRoot" labelDisplayFunction="getResourceName" showTooltipFunction="getResourcePathTooltip"
 							listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"
 							/> <!-- _this_ not constructed to use in binding will throw compiler warning -->
-
+	<forms:TextInformationForm label="Additional information" textProperty="cdataInformation"/>
 </suportclasses:BasePropertyEditor>
